--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,8 +9,19 @@
 <body>
     <header>
         <nav>
-            <img src="../static/logo.png" alt="Logo Fishnet" class="logo">
-            <h1>Fishnet</h1>
+            <!-- Contenedor del logo principal y título -->
+            <div class="nav-left">
+                <img src="../static/logo.png" alt="Logo Fishnet" class="logo">
+                <h1>Fishnet</h1>
+            </div>
+
+            <!-- Contenedor de "Powered by" y logo de Alpaca -->
+            <div class="nav-powered">
+                <p id="powerade">Powered by</p>
+                <img id="alpaca_logo" src="../static/alpaca_logo.png" alt="Logo Alpaca">
+            </div>
+
+            <!-- Enlaces de navegación -->
             <a href="#what">¿Qué es Fishnet?</a>
             <a href="#how">¿Cómo funciona?</a>
             <a href="#why">¿Por qué elegir Fishnet?</a>
