--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -20,7 +20,7 @@
 
                 <label for="broker">Seleccionar Broker:</label>
                 <select id="broker" name="broker">
-                    <option value="OANDA">OANDA</option>
+                    <option value="Alpaca">Alpaca</option>
                     <!-- Agregar más brokers si es necesario -->
                 </select>
 
